chore: install the CLI as part of the package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ requires-python = ">=3.11"
 readme = "README.md"
 license = { text = "MIT" }
 
+[project.scripts]
+media = "media_helper.cli:app"
+
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
