--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,10 @@ description = "Help you managing your personal media by providing tools for auto
 authors = [{ name = "Benoit Godard", email = "benoit.godard.p@gmail.com" }]
 dependencies = [
     "httpx>=0.27.0",
-    "pydantic>=2.6.4",
+    "pydantic>=2.7.0",
     "parse-torrent-title>=2.8.1",
     "pydantic-settings>=2.2.1",
-    "typer<0.12.0",
+    "typer>=0.12.3",
     "rich>=13.7.1",
 ]
 requires-python = ">=3.11"
@@ -24,20 +24,24 @@ build-backend = "pdm.backend"
 
 [tool.pdm]
 distribution = true
+plugins = ["sync-pre-commit-lock"]
 
 [tool.pdm.dev-dependencies]
 test = ["pytest>=8.1.1"]
-lint = ["ruff>=0.3.5", "mypy>=1.9.0"]
+lint = ["ruff>=0.3.7", "mypy>=1.9.0", "pre-commit>=3.7.0"]
 
 [tool.pdm.scripts]
 cli = { call = "media_helper.__main__:main" }
+lint = "pre-commit run --all-files"
 
 [tool.mypy]
+files = ["src", "tests"]
 strict = true
 plugins = "pydantic.mypy"
 
-[tool.ruff.lint]
-select = ["E", "F", "UP", "B", "SIM", "I"]
+[[tool.mypy.overrides]]
+module = "PTN.*"
+ignore_missing_imports = true
 
 [tool.pytest.ini_options]
 testpaths = ["src", "tests"]
